XFormsDB 1.2
Version 1.2 (May 29, 2016)
     * Updated Apache Tomcat to version 8.0.35
     * Updated Apache Ant to version 1.9.7
     * Added Ant-Contrib 1.0b3
     * Modified eXist-db to work with Apache Tomcat 8.0.35
     * Modified Orbeon Forms to work with Apache Tomcat 8.0.35
     * Modified XFormsDB web applications to work with Apache Tomcat 8.0.35
     * Added the XFormsRTC Chat web application
     * Updated JAVA_OPTS
     * Modified properties files to work with Apache Tomcat 8.0.35
     * Modified build.xml to work with Apache Ant 1.9.7 and Apache Tomcat 8.0.35